--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "express-healthcheck": "^0.1.0",
