--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   "devDependencies": {
     "dotenv": "^16.0.1",
     "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "pino-pretty": "^7.6.1"
+    "pino-pretty": "^7.6.1",
+    "prettier": "^2.6.2"
   },
   "engines": {
-    "node": ">=14.16.0"
+    "node": ">=14.18.0"
   },
   "scripts": {
     "start": "node index.js",
