commit #3 - more configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,6 +72,9 @@
         "maxDepth": 1
       }
     ],
-    "prettier/prettier": ["error"]
+    "prettier/prettier": [
+      "error"
+    ],
+    "no-console": 1
   }
 }
