--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
   "semi": true,
   "singleQuote": true,
+  "endOfLine": "auto",
+  "trailingComma": "none",
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "printWidth": 120
 }
