--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
   "eslint.validate": [
     "javascript"
   ]
