--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,10 @@
       }
     ],
     "prettier/prettier": [
-      "error"
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ],
     "no-console": 1
   }
